--- a/src/style.scss
+++ b/src/style.scss
@@ -7,8 +7,36 @@ body {
   background-color: $backgroundcolor;
 }
 
-.searchbar {
+.note-input {
+  margin-top: 1em;
+  display: flex;
+}
 
+.searchbar {
+  box-sizing: border-box;
+  padding-left: .7em;
+  margin-left: 1em;
+  width: 20em;
+  height: 2em;
+  font-size: 1.3em;
+  font-family: "Roboto", sans-serif;
+  color: $fontcolor;
+}
+
+button[type="submit"] {
+  box-sizing: border-box;
+  height: 2em;
+  width: 5em;
+  font-size: 1.3em;
+  font-family: "Roboto", sans-serif;
+  color: rgb(50, 50, 50);
+  background: white;
+  border: 1px solid rgb(200, 200, 200);
+  border-radius: 2px;
+}
+
+button[type="submit"]:hover {
+  background: rgba(220, 220, 220, .5);
 }
 
 #noteList {
@@ -19,8 +47,9 @@ body {
 
 .note {
   background: rgb(252, 240, 140);
-  width: 14em;
-  height: 17em;
+  min-width: 10em;
+  min-height: 10em;
+  max-width: 50em;
   border: 1px solid;
   border-color: rgb(130, 130, 130);
   box-shadow: .25em .25em .3em .05em rgb(170, 170, 170);
@@ -32,17 +61,24 @@ body {
   position: absolute;
 }
 
-.text {
-  margin-top: .75em;
-  height: 90%;
-  width: 97%;
+.note-title {
   font-family: "Roboto", sans-serif;
   color: $fontcolor;
-  font-size: 1.1em;
+  font-size: 1.7em;
 }
+//
+// .text {
+//   width: 100%;
+//   margin-top: .3em;
+//   font-family: "Roboto", sans-serif;
+//   color: $fontcolor;
+//   font-size: 1.1em;
+// }
 
 .note-header {
+  width: 100%;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -52,6 +88,7 @@ body {
 }
 
 .header-right {
+  margin-left: 1em;
   display: flex;
   align-items: center;
 }
@@ -60,35 +97,21 @@ body {
   margin-left: 5px;
 }
 
-.note-title {
-  font-size: 1.5em;
-}
-
 .textarea {
   box-sizing: border-box;
-  height: 70%;
-  width: 90%;
+  margin-top: 1em;
+  width: 100%;
+  height: 100%;
+  min-height: 5em;
+  min-width: 5em;
   font-family: "Roboto", sans-serif;
   color: $fontcolor;
   font-size: 1.2em;
   resize: none;
 }
 
-.button-area {
-  width: 84%;
-  display: flex;
-  justify-content: flex-end;
-}
-
-button[type=modal-button] {
-  margin-left: 1em;
-  margin-top: 2em;
-  background: rgb(131,191,252);
-  border: none;
-  width: 7em;
-  height: 4em;
-}
-
-button[type=modal-button]:hover {
-  box-shadow: 0 0 .5em .2em rgba(100,100,100,.7);
+.noteBody {
+  font-family: "Roboto", sans-serif;
+  color: $fontcolor;
+  font-size: 1.3em;
 }
