--- a/src/style.scss
+++ b/src/style.scss
@@ -90,21 +90,82 @@ button[type="submit"]:hover {
   margin-left: 5px;
 }
 
-.textarea {
-  box-sizing: border-box;
-  margin-top: 1em;
-  width: 100%;
-  height: 100%;
-  min-height: 5em;
-  min-width: 5em;
-  font-family: "Roboto", sans-serif;
-  color: $fontcolor;
-  font-size: 1.2em;
-  resize: none;
-}
-
 .noteBody {
   font-family: "Roboto", sans-serif;
   color: $fontcolor;
   font-size: 1.3em;
+}
+
+.modal {
+  margin-left: 25vw;
+  background: rgb(220, 200, 220);
+  border: 1px solid rgb(50, 50, 50);
+  margin-top: 10vw;
+  width: 40em;
+  height: 20em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title-editing {
+  width: 90%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.title-edit-label {
+  font-family: "Roboto", sans-serif;
+  color: $fontcolor;
+  font-size: 1.3em;
+}
+
+.modal-input {
+  width: 20em;
+  height: 1.5em;
+  font-family: "Roboto", sans-serif;
+  color: $fontcolor;
+  font-size: 1em;
+}
+
+.text-editing {
+  margin-top: 1.5em;
+  width: 90%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.text-edit-label {
+  font-family: "Roboto", sans-serif;
+  color: $fontcolor;
+  font-size: 1.3em;
+}
+
+.modal-textarea {
+  width: 20em;
+  height: 5em;
+  font-family: "Roboto", sans-serif;
+  color: $fontcolor;
+  font-size: 1em;
+  resize: none;
+}
+
+.modal-buttons {
+  margin-top: 1.5em;
+  width: 77%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+button[type="modal-button"] {
+  margin-left: .7em;
+  font-family: "Roboto", sans-serif;
+  color: $fontcolor;
+  font-size: 1.3em;
+  width: 5em;
+  height: 2em;
+}
+
+button[type="modal-button"]:hover {
+  box-shadow: .05em .05em .2em .07em rgb(100, 100, 100);
 }
